ArC: improve the All annotation literal implementation
This commit also slightly improves how annotation literal classes
are generated and how built-in qualifiers are represented.